--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VEX Path Planner - Cumulative Fix</title>
+    <title>VEX Path Planner - Dual Mode</title>
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -20,6 +20,7 @@
         margin-bottom: 5px;
       }
 
+      /* KONTROL PANELI STILLERI */
       .controls {
         background: #2d2d2d;
         padding: 10px 20px;
@@ -27,14 +28,17 @@
         margin-bottom: 15px;
         display: flex;
         align-items: center;
-        gap: 15px;
+        gap: 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
       }
 
       .controls label {
         font-weight: bold;
         color: #fff;
+        font-size: 14px;
       }
-      .controls input {
+      .controls input[type="number"],
+      .controls input[type="text"] {
         background: #444;
         border: 1px solid #555;
         color: #fff;
@@ -44,6 +48,64 @@
         text-align: center;
       }
 
+      /* TOGGLE SWITCH STILLERI */
+      .switch-container {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        background: #383838;
+        padding: 5px 15px;
+        border-radius: 20px;
+      }
+
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+      }
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        transition: 0.4s;
+        border-radius: 20px;
+      }
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 16px;
+        width: 16px;
+        left: 2px;
+        bottom: 2px;
+        background-color: white;
+        transition: 0.4s;
+        border-radius: 50%;
+      }
+      input:checked + .slider {
+        background-color: #007bff;
+      }
+      input:checked + .slider:before {
+        transform: translateX(20px);
+      }
+
+      #modeLabel {
+        color: #fff;
+        font-weight: bold;
+        min-width: 90px;
+        text-align: center;
+      }
+
+      /* ANA KONTEYNER */
       .container {
         display: flex;
         gap: 20px;
@@ -54,7 +116,7 @@
       .canvas-wrapper {
         position: relative;
         border: 4px solid #444;
-        cursor: crosshair;
+        cursor: crosshair; /* Default cursor */
         width: 600px;
         height: 600px;
       }
@@ -77,7 +139,7 @@
 
       textarea {
         width: 100%;
-        height: 450px;
+        height: 400px;
         background-color: #111;
         color: #569cd6;
         border: 1px solid #555;
@@ -89,14 +151,21 @@
         overflow-x: auto;
       }
 
+      .btn-group {
+        display: flex;
+        gap: 10px;
+      }
+
       button {
         padding: 10px;
+        flex: 1;
         background-color: #007bff;
         color: white;
         border: none;
         cursor: pointer;
         border-radius: 5px;
         font-weight: bold;
+        transition: background 0.2s;
       }
 
       button:hover {
@@ -108,37 +177,52 @@
       button.clear:hover {
         background-color: #a71d2a;
       }
+      button.undo {
+        background-color: #ffc107;
+        color: #333;
+      }
+      button.undo:hover {
+        background-color: #e0a800;
+      }
 
       .info {
         font-size: 0.85em;
         color: #aaa;
+        margin-top: 5px;
       }
     </style>
   </head>
   <body>
-    <h1>VEX Ez Template Path Planner (Cumulative)</h1>
+    <h1>VEX High Stakes Path Planner</h1>
 
     <div class="controls">
-      <label for="pointCountInput">Nokta Sayısı:</label>
+      <div class="switch-container">
+        <span style="font-size: 12px; color: #aaa">MOD:</span>
+        <label class="switch">
+          <input type="checkbox" id="modeToggle" onchange="toggleMode()" />
+          <span class="slider"></span>
+        </label>
+        <span id="modeLabel">Serbest Çizim</span>
+      </div>
+
+      <span style="border-left: 1px solid #555; height: 20px"></span>
+
+      <label for="pointCountInput">Nokta:</label>
       <input
         type="number"
         id="pointCountInput"
-        value="7"
+        value="20"
         min="2"
         max="100"
         onchange="updateSettings()"
       />
-
-      <span
-        style="border-left: 1px solid #555; height: 20px; margin: 0 5px"
-      ></span>
 
       <label for="speedInput">Hız:</label>
       <input
         type="text"
         id="speedInput"
         value="DRIVE_SPEED"
-        style="width: 100px"
+        style="width: 80px"
       />
     </div>
 
@@ -149,24 +233,37 @@
 
       <div id="output-panel">
         <h3>Inertial Sensor Çıktısı</h3>
-        <div class="info">Sağ: 0, Yukarı: -90 (Sürekli Artan/Azalan)</div>
+        <div class="info">Sağ: 0, Yukarı: -90 (Sürekli)</div>
         <textarea id="outputBox" readonly>
-// Yolu çizdiğinizde kod burada belirecek...</textarea
+// Mod seçimi yapın ve çizime başlayın...</textarea
         >
-        <button onclick="copyToClipboard()">Kodu Kopyala</button>
-        <button class="clear" onclick="clearCanvas()">Temizle</button>
+
+        <div class="btn-group">
+          <button onclick="copyToClipboard()">Kopyala</button>
+          <button
+            class="undo"
+            onclick="undoLastPoint()"
+            id="undoBtn"
+            style="display: none"
+          >
+            Geri Al
+          </button>
+          <button class="clear" onclick="clearCanvas()">Temizle</button>
+        </div>
       </div>
     </div>
 
     <script>
-      // --- AYARLAR ---
+      // --- AYARLAR VE DEĞİŞKENLER ---
       const canvas = document.getElementById("fieldCanvas");
       const ctx = canvas.getContext("2d");
       const outputBox = document.getElementById("outputBox");
       const pointCountInput = document.getElementById("pointCountInput");
       const speedInput = document.getElementById("speedInput");
+      const modeLabel = document.getElementById("modeLabel");
+      const undoBtn = document.getElementById("undoBtn");
 
-      // Görsel dosya adı (Kendi dosya adınla aynı olmalı)
+      // Görsel
       const bgImage = new Image();
       bgImage.src = "field.png";
 
@@ -174,10 +271,12 @@
       const CANVAS_SIZE = 600;
       const PIXELS_PER_INCH = CANVAS_SIZE / FIELD_SIZE_INCHES;
 
-      // Origin Offset (Kırmızı Bölge Önü)
+      // Origin Offset
       const OFFSET_X = -48;
       const OFFSET_Y = 0;
 
+      // State Değişkenleri
+      let isPointMode = false; // False: Serbest Çizim, True: Nokta Ekleme
       let isDrawing = false;
       let rawPoints = [];
 
@@ -185,27 +284,64 @@
         drawScreen();
       };
 
-      // --- Event Listeners (Mouse Hareketleri) ---
+      // --- MOD DEĞİŞTİRME ---
+      function toggleMode() {
+        const toggle = document.getElementById("modeToggle");
+        isPointMode = toggle.checked;
+
+        if (isPointMode) {
+          modeLabel.innerText = "Nokta Ekleme";
+          undoBtn.style.display = "block"; // Nokta modunda geri al butonu göster
+          canvas.style.cursor = "cell";
+        } else {
+          modeLabel.innerText = "Serbest Çizim";
+          undoBtn.style.display = "none";
+          canvas.style.cursor = "crosshair";
+        }
+        // Mod değişince temizleyelim ki karışıklık olmasın
+        clearCanvas();
+      }
+
+      // --- MOUSE OLAYLARI ---
       canvas.addEventListener("mousedown", (e) => {
-        isDrawing = true;
-        rawPoints = [];
-        addRawPoint(e);
+        if (isPointMode) {
+          // MOD 2: NOKTA EKLEME (Tıklayınca ekle ve anında hesapla)
+          addRawPoint(e);
+          drawScreen();
+          processPath(); // Anında işle
+        } else {
+          // MOD 1: SERBEST ÇİZİM (Basılı tutunca başla)
+          isDrawing = true;
+          rawPoints = []; // Yeni çizgi için temizle
+          addRawPoint(e);
+          drawScreen();
+        }
       });
 
       canvas.addEventListener("mousemove", (e) => {
-        if (!isDrawing) return;
-        addRawPoint(e);
-        drawScreen();
-        drawRawPath();
+        if (isPointMode) {
+          // Nokta modunda sürüklerken çizim yapmıyoruz,
+          // İstenirse burada "ghost line" (hayalet çizgi) eklenebilir.
+          return;
+        }
+
+        // Serbest çizim modunda sürüklerken ekle
+        if (isDrawing) {
+          addRawPoint(e);
+          drawScreen();
+          drawRawPath(); // Sadece yeşil ham çizgiyi göster
+        }
       });
 
       canvas.addEventListener("mouseup", () => {
-        isDrawing = false;
-        processPath();
+        if (!isPointMode && isDrawing) {
+          isDrawing = false;
+          processPath(); // Çizim bitince işle
+        }
       });
 
       canvas.addEventListener("mouseleave", () => {
-        if (isDrawing) {
+        if (!isPointMode && isDrawing) {
           isDrawing = false;
           processPath();
         }
@@ -217,7 +353,21 @@
         }
       }
 
-      // --- Temel Çizim Fonksiyonları ---
+      function undoLastPoint() {
+        if (rawPoints.length > 0) {
+          rawPoints.pop();
+          drawScreen();
+          if (rawPoints.length > 1) {
+            processPath();
+          } else {
+            // Tek nokta kaldıysa veya bittiyse çıktıyı temizle
+            drawRawPath(); // Kalan tek noktayı göster
+            outputBox.value = "// Nokta eklemeye devam edin...";
+          }
+        }
+      }
+
+      // --- ÇİZİM FONKSİYONLARI ---
       function addRawPoint(e) {
         const rect = canvas.getBoundingClientRect();
         const x = e.clientX - rect.left;
@@ -227,7 +377,6 @@
 
       function drawScreen() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        // Resim yüklenemezse hata vermesin diye kontrol
         if (bgImage.complete && bgImage.naturalHeight !== 0) {
           ctx.drawImage(bgImage, 0, 0, CANVAS_SIZE, CANVAS_SIZE);
         } else {
@@ -236,6 +385,18 @@
         }
         drawGrid();
         drawOrigin();
+
+        // Eğer nokta modundaysak ham yolu (işaretlenen noktaları) sürekli göster
+        if (isPointMode && rawPoints.length > 0) {
+          drawRawPath();
+          // Noktaların yerlerini belirginleştir
+          ctx.fillStyle = "#00ff00";
+          for (let p of rawPoints) {
+            ctx.beginPath();
+            ctx.arc(p.x, p.y, 3, 0, Math.PI * 2);
+            ctx.fill();
+          }
+        }
       }
 
       function drawGrid() {
@@ -278,23 +439,31 @@
       }
 
       function drawRawPath() {
-        if (rawPoints.length < 2) return;
+        if (rawPoints.length < 1) return;
         ctx.beginPath();
         ctx.strokeStyle = "#00ff00";
-        ctx.lineWidth = 3;
+        ctx.lineWidth = 2;
+
+        // Eğer tek nokta varsa sadece onu çiz
+        if (rawPoints.length === 1) {
+          ctx.arc(rawPoints[0].x, rawPoints[0].y, 2, 0, Math.PI * 2);
+          return;
+        }
+
         ctx.moveTo(rawPoints[0].x, rawPoints[0].y);
         for (let i = 1; i < rawPoints.length; i++)
           ctx.lineTo(rawPoints[i].x, rawPoints[i].y);
         ctx.stroke();
       }
 
-      // --- Matematiksel İşlemler ---
+      // --- MATEMATİK VE İŞLEME ---
       function processPath() {
         if (rawPoints.length < 2) return;
 
         let desiredPoints = parseInt(pointCountInput.value);
         if (desiredPoints < 2) desiredPoints = 2;
 
+        // 1. Toplam uzunluğu hesapla
         let totalLength = 0;
         let lengths = [0];
 
@@ -305,6 +474,9 @@
           lengths.push(totalLength);
         }
 
+        // 2. Noktaları eşit aralıklarla yeniden örnekle (Resampling)
+        // Bu kısım hem serbest çizim hem de nokta modu için çalışır.
+        // Nokta modunda A'dan B'ye düz çizgi olsa bile arayı doldurur.
         const step = totalLength / (desiredPoints - 1);
         let finalPoints = [];
         finalPoints.push(rawPoints[0]);
@@ -326,8 +498,10 @@
         }
         finalPoints.push(rawPoints[rawPoints.length - 1]);
 
+        // Ekranı güncelle
         drawScreen();
 
+        // İşlenmiş yolu çiz (Mavi/Cyan)
         ctx.beginPath();
         ctx.strokeStyle = "cyan";
         ctx.lineWidth = 2;
@@ -335,6 +509,7 @@
         for (let p of finalPoints) ctx.lineTo(p.x, p.y);
         ctx.stroke();
 
+        // İşlenmiş noktaları göster (Kırmızı)
         ctx.fillStyle = "red";
         for (let p of finalPoints) {
           ctx.beginPath();
@@ -349,34 +524,21 @@
         let pixelDX = point.x - CANVAS_SIZE / 2;
         let pixelDY = CANVAS_SIZE / 2 - point.y;
 
-        // VEX Sahanın Standart Koordinatları
         let inchesX = pixelDX / PIXELS_PER_INCH - OFFSET_X;
         let inchesY = pixelDY / PIXELS_PER_INCH - OFFSET_Y;
 
         return { x: inchesX, y: inchesY };
       }
 
-      // --- YENİ AÇI HESAPLAMA MANTIĞI ---
-      // Sadece iki nokta arasındaki ham açıyı verir.
-      // İstenen: Sağ=0, Yukarı=-90, Sol=180/-180, Aşağı=90
+      // --- AÇI HESABI ---
       function calculateRawHeading(p1, p2) {
         const c1 = getCoordinatesInches(p1);
         const c2 = getCoordinatesInches(p2);
-
-        const dy = c2.y - c1.y; // Yukarı pozitif
-        const dx = c2.x - c1.x; // Sağ pozitif
-
-        // Math.atan2(y,x) standartı: Sağ=0, Yukarı=90, Sol=180, Aşağı=-90
+        const dy = c2.y - c1.y;
+        const dx = c2.x - c1.x;
         let mathAngleRad = Math.atan2(dy, dx);
         let mathAngleDeg = (mathAngleRad * 180) / Math.PI;
-
-        // Bizim isteğimiz: Yukarı -90 olsun.
-        // Matematik açısının negatifini alırsak:
-        // Sağ (0) -> -0 = 0 (OK)
-        // Yukarı (90) -> -90 (OK)
-        // Sol (180) -> -180 (OK)
-        // Aşağı (-90) -> 90 (OK)
-
+        // Eksen Düzeltme: -MathAngle (Yukarı -90)
         return -mathAngleDeg;
       }
 
@@ -384,7 +546,6 @@
         const speedVar = speedInput.value;
         let outputText = "chassis.pid_odom_set({\n";
 
-        // Kümülatif (Sürekli) Açı için Değişkenler
         let previousRawAngle = 0;
         let continuousAngle = 0;
 
@@ -392,43 +553,30 @@
           let currentP = points[i];
           let coords = getCoordinatesInches(currentP);
 
-          // --- AÇI HESABI ---
+          // Açı Hesabı
           let currentRawAngle = 0;
-
-          // 1. Mevcut segmentin ham açısını bul
           if (i < points.length - 1) {
             currentRawAngle = calculateRawHeading(currentP, points[i + 1]);
           } else {
-            // Son nokta için bir önceki açıyı koru
             currentRawAngle = calculateRawHeading(points[i - 1], currentP);
           }
 
-          // 2. Kümülatif Hesaplama
+          // Kümülatif Logic
           if (i === 0) {
-            // İlk noktada doğrudan değeri al
             continuousAngle = currentRawAngle;
           } else {
-            // Önceki açı ile şimdiki açı arasındaki en kısa yolu bul
             let delta = currentRawAngle - previousRawAngle;
-
-            // Normalizasyon (Sargı Çözme): Delta'yı -180 ile 180 arasına sıkıştır
             while (delta > 180) delta -= 360;
             while (delta < -180) delta += 360;
-
-            // Kümülatif toplama ekle
             continuousAngle += delta;
           }
-
-          // Bir sonraki tur için ham açıyı kaydet
           previousRawAngle = currentRawAngle;
-          // ------------------
 
           let xFinal = Math.round(coords.x * 100) / 100;
-          let yFinal = -Math.round(coords.y * 100) / 100;
-          // Hesaplanmış sürekli açıyı kullan
+          let yFinal = Math.round(coords.y * 100) / 100;
           let angleFinal = Math.round(continuousAngle * 100) / 100;
 
-          const lineData = `{${yFinal}_in, ${xFinal}_in, ${angleFinal}_deg, fwd, ${speedVar}}`;
+          const lineData = `{${xFinal}_in, ${yFinal}_in, ${angleFinal}_deg, fwd, ${speedVar}}`;
 
           if (i === 0) {
             outputText += "      " + lineData;
@@ -450,7 +598,7 @@
       function clearCanvas() {
         rawPoints = [];
         drawScreen();
-        outputBox.value = "// Yolu çizdiğinizde kod burada belirecek...";
+        outputBox.value = "// Mod seçimi yapın ve çizime başlayın...";
       }
     </script>
   </body>
